IFS-2405 Escaping special characters in text

--- a/ifs-web-service/ifs-front-door-service/src/main/resources/templates/competition/info/apc-terms-and-conditions.html
+++ b/ifs-web-service/ifs-front-door-service/src/main/resources/templates/competition/info/apc-terms-and-conditions.html
@@ -29,7 +29,7 @@
 
     <h2 class="heading-medium">1. General terms and conditions</h2>
 
-    <p>Innovate UK reserves the right to change these grant terms and conditions unilaterally and at any time by giving 3 months’ notice.</p>
+    <p>Innovate UK reserves the right to change these grant terms and conditions unilaterally and at any time by giving 3 months&#39; notice.</p>
 
     <p>You cannot assign, transfer or sub-contract any of your rights or obligations under this agreement to any third party.</p>
 
@@ -64,7 +64,7 @@
         <li>inform Innovate UK promptly, through your monitoring officer (MO), of any issue or material change that may
             affect the progress, delivery or exploitation of the project</li>
         <li>within 3 months of the end of the project, provide the MO with the final project report and confirmation
-            that the final claim and final independent accountant’s report have been submitted</li>
+            that the final claim and final independent accountant&#39;s report have been submitted</li>
     </ul>
 
     <h2 class="heading-medium">4. Payment of grant</h2>
@@ -78,7 +78,7 @@
     <ul class="list list-bullet">
         <li>a revised forecast of eligible project costs which details expected costs for each future claim period and
             highlights any variations from the last forecast</li>
-        <li>an independent accountant’s report (see paragraph 7)</li>
+        <li>an independent accountant&#39;s report (see paragraph 7)</li>
     </ul>
 
     <p>Innovate UK will normally pay the grant within 30 days, unless we need further information to support the claim.
@@ -91,7 +91,7 @@
         required financial reports on any projects funded by Innovate UK.</p>
 
     <p>Innovate UK will not pay more than 85% of the grant until all outstanding claims and supporting information have
-        been received and the final independent accountant’s report has been approved.</p>
+        been received and the final independent accountant&#39;s report has been approved.</p>
 
     <p>You are responsible for maintaining detailed records and documentation relating to your award. These should
         provide evidence that your eligible project costs comply with all state aid rules, as outlined in paragraph 9.
@@ -100,12 +100,12 @@
 
     <p>Innovate UK may appoint an auditor to ensure you are complying with these terms and conditions. You agree to
         give the auditor access to your project records within 2 weeks of notice of their appointment. If the auditor
-        determines that you should repay the grant to Innovate UK, Innovate UK may recover the cost of the auditor’s
+        determines that you should repay the grant to Innovate UK, Innovate UK may recover the cost of the auditor&#39;s
         work from you.</p>
 
     <h2 class="heading-medium">5. Monitoring</h2>
 
-    <p>Your delivery of the project will be monitored in accordance with Innovate UK’s project monitoring framework.
+    <p>Your delivery of the project will be monitored in accordance with Innovate UK&#39;s project monitoring framework.
         You will meet with your assigned monitoring officer as often as is agreed at the start of the project. You will
         also allow them access to your employees, agents, premises, facilities and records to review your progress, and
         send them any information, explanations and documents requested within 10 days.</p>
@@ -128,7 +128,7 @@
         <li>false statements on how you will use the grant made as part of the application process, or false statements
             on your use of grant or in your claims made for grant</li>
         <li>failure to maintain satisfactory progress on the project or to meet your delivery plan</li>
-        <li>a suspected conflict of interest or a suspected breach of Innovate UK’s conflict of interest policy</li>
+        <li>a suspected conflict of interest or a suspected breach of Innovate UK&#39;s conflict of interest policy</li>
         <li>suspected overpayment of grant by Innovate UK</li>
         <li>any material changes to the proposed outcomes of the project</li>
         <li>a breach of the confidentiality provisions in paragraph 8</li>
@@ -141,13 +141,13 @@
         suspend the grant in the event that:</p>
 
     <ul class="list list-bullet">
-        <li>you are found, to Innovate UK’s satisfaction, to have misused grant funds or made false statements as
+        <li>you are found, to Innovate UK&#39;s satisfaction, to have misused grant funds or made false statements as
             suspected in the first or second bullet points above</li>
-        <li>you fail to resolve to Innovate UK’s satisfaction, or it is not possible to resolve, the reasons for
+        <li>you fail to resolve to Innovate UK&#39;s satisfaction, or it is not possible to resolve, the reasons for
             suspension set out in the second bullet point above</li>
         <li>you are found to have committed an offence under the Bribery Act 2010, whether as part of the project or
             otherwise</li>
-        <li>you are found to have breached Innovate UK’s policies relating to anti-bribery, data protection or conflict
+        <li>you are found to have breached Innovate UK&#39;s policies relating to anti-bribery, data protection or conflict
             of interest</li>
         <li>you become insolvent, are declared bankrupt, are placed into receivership, administration or liquidation,
             or a petition has been presented for winding up, or any similar arrangements that may affect you financially</li>
@@ -156,15 +156,15 @@
         <li>Innovate UK is subject to an event of force majeure, as set out in paragraph 16</li>
     </ul>
 
-    <p>If you do not resolve the reason for suspension of the award to Innovate UK’s satisfaction, or if we permanently
+    <p>If you do not resolve the reason for suspension of the award to Innovate UK&#39;s satisfaction, or if we permanently
         withdraw the award, we may require you to repay some or all payments made to you under the award of grant. This
         does not include any withdrawal for force majeure, where paragraph 16 will apply.</p>
 
     <h2 class="heading-medium">7. Financial reporting</h2>
 
-    <p>You agree to appoint an independent accountant using Innovate UK’s standard letter of engagement template. The
+    <p>You agree to appoint an independent accountant using Innovate UK&#39;s standard letter of engagement template. The
         independent accountant will, at your expense, inspect your financial statements relating to the grant. They will
-        prepare an independent accountant’s report at the intervals stated in the relevant guidance note from the letter
+        prepare an independent accountant&#39;s report at the intervals stated in the relevant guidance note from the letter
         template. The report will contain an opinion that:</p>
 
     <ul class="list list-bullet">
@@ -173,13 +173,13 @@
         <li>you have provided satisfactory explanations for any queries raised by the independent accountant</li>
     </ul>
 
-    <p>You must appoint an independent accountant in a manner consistent with Innovate UK’s Standard Terms of
+    <p>You must appoint an independent accountant in a manner consistent with Innovate UK&#39;s Standard Terms of
         Engagement of Accountants, which Innovate UK will send with the grant offer letter.</p>
 
     <p>In some circumstances, you may be asked to provide your latest published annual accounts or management accounts,
         as long as you do not breach any law, order or regulation restricting such disclosure.</p>
 
-    <p>Innovate UK may also require you to submit an independent accountant’s report if any of the following occur:</p>
+    <p>Innovate UK may also require you to submit an independent accountant&#39;s report if any of the following occur:</p>
 
     <ul class="list list-bullet">
         <li>you withdraw from the project</li>
@@ -196,7 +196,7 @@
     <p>Innovate UK reserves the right to request access to any additional information we deem necessary in connection
         with this award. You must provide or allow access to such information within 2 weeks of a request.</p>
 
-    <p>If you disclose Innovate UK’s confidential information, you will be in breach of these terms and conditions and
+    <p>If you disclose Innovate UK&#39;s confidential information, you will be in breach of these terms and conditions and
         we may suspend or withdraw the grant.</p>
 
     <h2 class="heading-medium">9. State aid obligations</h2>
@@ -205,7 +205,7 @@
         href="http://ec.europa.eu/competition/state_aid/cases/256732/256732_1703219_80_2.pdf">Research, Development and
         Innovation Scheme</a></p>
 
-    <p>operating under Commission Regulation (EU) No 651/2014 (“the General Block Exemption Regulation (GBER)”).</p>
+    <p>operating under Commission Regulation (EU) No 651/2014 (&#147;the General Block Exemption Regulation (GBER)&#148;).</p>
 
     <p>You must inform Innovate UK of any other public funding applied for or awarded against the eligible costs
         covered by this offer. It is your responsibility to ensure that the cumulative total of public funding you are
@@ -261,7 +261,7 @@
 
     <h2 class="heading-medium">16. Force majeure</h2>
 
-    <p>When Innovate UK’s ability to continue funding your project is affected by an event of force majeure, or a
+    <p>When Innovate UK&#39;s ability to continue funding your project is affected by an event of force majeure, or a
         change to the laws of England and Wales, UK government or devolved administration policy, or the Legal Acts of
         the European Union, we may terminate the grant by giving you as much notice as possible in writing. In such
         circumstances, Innovate UK will meet any eligible costs you have reasonably incurred and paid prior to the date
@@ -271,7 +271,7 @@
 
     <p>The property, rights and liabilities of Innovate UK will be acquired by UK Research and Innovation (UKRI) in
         accordance with the Higher Education and Research Act 2017. Once the UKRI Property Transfer Scheme becomes
-        effective, all of Innovate UK’s rights, benefits, obligations and liabilities related to your application and
+        effective, all of Innovate UK&#39;s rights, benefits, obligations and liabilities related to your application and
         for the award and monitoring of any grant will move to UKRI. You will take any reasonable actions we request to
         make this possible.</p>
 
@@ -287,7 +287,7 @@
     <h2 class="heading-medium">19. Special conditions</h2>
 
     <p>You will be required to pay the APC for the services it provides, as outlined in Schedule 1, by the payment of a
-        fee by every project partner. The fee will be calculated as 3.5% of the value of each project partner’s portion
+        fee by every project partner. The fee will be calculated as 3.5% of the value of each project partner&#39;s portion
         of the grant. Academic partners are also required to pay this fee.</p>
 
     <p>This is an absolute condition of the award of your grant.</p>
@@ -352,14 +352,6 @@
         be set by the APC in consultation with you.</p>
 
     <p>APC will agree the content and structure of the review with you in advance, and in consultation with Innovate UK.</p>
-
-
-
-
-
-
-
-
 
 
 
