--- a/ifs-web-service/ifs-front-door-service/src/main/resources/templates/competition/info/apc-terms-and-conditions.html
+++ b/ifs-web-service/ifs-front-door-service/src/main/resources/templates/competition/info/apc-terms-and-conditions.html
@@ -201,11 +201,11 @@
 
     <h2 class="heading-medium">9. State aid obligations</h2>
 
-    <p>Innovate UK awards grant funding through its <a
-        href="http://ec.europa.eu/competition/state_aid/cases/256732/256732_1703219_80_2.pdf">Research, Development and
+    <p>Innovate UK awards grant funding through its
+        <a href="http://ec.europa.eu/competition/state_aid/cases/256732/256732_1703219_80_2.pdf">Research, Development and
         Innovation Scheme</a></p>
 
-    <p>operating under Commission Regulation (EU) No 651/2014 (&#147;the General Block Exemption Regulation (GBER)&#148;).</p>
+    <p>operating under Commission Regulation (EU) No 651/2014 (&quot;the General Block Exemption Regulation (GBER)&quot;).</p>
 
     <p>You must inform Innovate UK of any other public funding applied for or awarded against the eligible costs
         covered by this offer. It is your responsibility to ensure that the cumulative total of public funding you are
