IFS-2405 Updated text

--- a/ifs-web-service/ifs-front-door-service/src/main/resources/templates/competition/info/apc-terms-and-conditions.html
+++ b/ifs-web-service/ifs-front-door-service/src/main/resources/templates/competition/info/apc-terms-and-conditions.html
@@ -41,12 +41,11 @@
 
     <ul class="list list-bullet">
         <li>accepts no liability for any consequences, whether direct or indirect, that may come about by undertaking
-            the project, using the grant, or ending the award
-        </li>
+            the project, using the grant, or ending the award</li>
         <li>limits its liability to the amount of eligible award that can be evidenced</li>
     </ul>
 
-    <p>These terms and conditions and our competition process and awards are subject to the laws of England and Wales.</p>
+    <p>These terms and conditions and awards are subject to the laws of England and Wales.</p>
 
     <p>An award cannot be used for any political or lobbying activity or purpose.</p>
 
@@ -105,10 +104,10 @@
 
     <h2 class="heading-medium">5. Monitoring</h2>
 
-    <p>Your delivery of the project will be monitored in accordance with Innovate UK&#39;s project monitoring framework.
-        You will meet with your assigned monitoring officer as often as is agreed at the start of the project. You will
-        also allow them access to your employees, agents, premises, facilities and records to review your progress, and
-        send them any information, explanations and documents requested within 10 days.</p>
+    <p>Your project will be monitored in accordance with Innovate UK&#39;s project monitoring framework. You will meet with
+        your assigned monitoring officer as often as is agreed at the start of the project. You will allow them access
+        to your employees, agents, premises, facilities and records to review your progress, and send them any
+        information, explanations and documents requested within 10 days.</p>
 
     <h2 class="heading-medium">6. Suspension, withdrawal and repayment of grant</h2>
 
@@ -116,9 +115,8 @@
         impact on delivery of the project. You agree that if this happens, Innovate UK may inform other government or
         anti-fraud agencies.</p>
 
-    <p>Innovate UK may immediately suspend grant payment at any time for any reason Innovate UK considers reasonable.
-        If this happens, we will serve you with a written notice giving the reasons for suspension and requiring you to
-        remedy the issue within 30 days.</p>
+    <p>Innovate UK may suspend grant payments for any reason Innovate UK considers reasonable. If this happens, we will
+        serve you with a written notice specifying the breach and requiring you to remedy the issue within 30 days.</p>
 
     <p>Examples of events that may result in suspension include:</p>
 
@@ -141,19 +139,15 @@
         suspend the grant in the event that:</p>
 
     <ul class="list list-bullet">
-        <li>you are found, to Innovate UK&#39;s satisfaction, to have misused grant funds or made false statements as
-            suspected in the first or second bullet points above</li>
-        <li>you fail to resolve to Innovate UK&#39;s satisfaction, or it is not possible to resolve, the reasons for
-            suspension set out in the second bullet point above</li>
-        <li>you are found to have committed an offence under the Bribery Act 2010, whether as part of the project or
-            otherwise</li>
+        <li>you are found, to Innovate UK&#39;s satisfaction, to have misused grant funds or made false statements</li>
+        <li>you fail to resolve to Innovate UK&#39;s satisfaction, or it is not possible to resolve, the reasons for suspension</li>
+        <li>you are found to have committed an offence under the Bribery Act 2010</li>
         <li>you are found to have breached Innovate UK&#39;s policies relating to anti-bribery, data protection or conflict
             of interest</li>
         <li>you become insolvent, are declared bankrupt, are placed into receivership, administration or liquidation,
             or a petition has been presented for winding up, or any similar arrangements that may affect you financially</li>
         <li>your legal status changes, including a change of control</li>
         <li>you are found to have breached the state aid rules in paragraph 9</li>
-        <li>Innovate UK is subject to an event of force majeure, as set out in paragraph 16</li>
     </ul>
 
     <p>If you do not resolve the reason for suspension of the award to Innovate UK&#39;s satisfaction, or if we permanently
@@ -190,14 +184,8 @@
 
     <h2 class="heading-medium">8. Confidentiality and information management</h2>
 
-    <p>You will keep confidential all information Innovate UK marks as confidential. If you request in writing
-        permission to disclose such information, we will consider your request and act reasonably.</p>
-
     <p>Innovate UK reserves the right to request access to any additional information we deem necessary in connection
         with this award. You must provide or allow access to such information within 2 weeks of a request.</p>
-
-    <p>If you disclose Innovate UK&#39;s confidential information, you will be in breach of these terms and conditions and
-        we may suspend or withdraw the grant.</p>
 
     <h2 class="heading-medium">9. State aid obligations</h2>
 
@@ -229,16 +217,16 @@
 
     <h2 class="heading-medium">11. Exploitation of project results</h2>
 
-    <p>Innovate UK expects you to refine and update your exploitation plan over the lifetime of the project.</p>
+    <p>Innovate UK expects you to refine and update your exploitation plan over the project&#39;s lifetime.</p>
 
     <p>For a period of 5 years from the end of the project, Innovate UK expects you to take reasonable steps to exploit
         the results of the project in the UK or wider European Economic Area.</p>
 
     <h2 class="heading-medium">12. Collection of economic data</h2>
 
-    <p>You will provide annual records of the realised and expected economic outputs that have arisen because of the
-        project, following the specific requirements provided as part of the request. You will provide these for the
-        life of the project and where requested, for up to 5 years after the project has completed.</p>
+    <p>For the life of the project, you will provide annual records of the realised and expected economic outputs that
+        have arisen because of the project. You will provide this data where requested, for up to 5 years after the
+        project has completed.</p>
 
     <p>This information will be shared with the Department for Business Energy and Industrial Strategy and the APC to
         help evaluate the value for money of the APC programme as a whole.</p>
