--- a/ifs-web-service/ifs-application-service/src/main/resources/templates/application-feedback-summary.html
+++ b/ifs-web-service/ifs-application-service/src/main/resources/templates/application-feedback-summary.html
@@ -231,7 +231,7 @@
                 <ul class="boxed-list">
                     <li th:each="item, iterStat : ${feedback}">
                         <h3 class="heading-small" th:text="|Assessor ${iterStat.count}|">Assessor 1</h3>
-                        <div th:text="${item}"  class="wysiwyg-styles" style="white-space: pre-wrap">Feedback text</div>
+                        <div th:text="${item}"  class="wysiwyg-styles" style="white-space: pre">Feedback text</div>
                     </li>
                 </ul>
             </div>
