--- a/ifs-web-service/ifs-assessment-service/src/main/resources/templates/assessor-dashboard.html
+++ b/ifs-web-service/ifs-assessment-service/src/main/resources/templates/assessor-dashboard.html
@@ -153,7 +153,7 @@
                             <li th:each="assessmentPanelAccept : ${model.assessmentPanelAccepted}">
                                 <div class="task">
                                     <h3 class="heading-small">
-                                        <!--link needs changing-->
+                                        <!--/* link will be implemented in IFS-1388 */-->
                                         <a class="disabled" aria-disabled="true"
                                            th:text="${assessmentPanelAccept.competitionName}"/>
                                     </h3>
