IFS-2362 - Border removal for first child in .contentGroup sass.

--- a/ifs-web-service/ifs-web-core/src/main/resources/static/sass/pages/_competition-management.scss
+++ b/ifs-web-service/ifs-web-core/src/main/resources/static/sass/pages/_competition-management.scss
@@ -258,6 +258,10 @@ $wide-page-width: 1400px;
   padding: 30px 0;
   border-top: 1px solid $border-colour;
 
+  &:first-child{
+    border-top: none;
+  }
+
   &:last-child{
     margin-bottom: 30px;
     border-bottom: 1px solid $border-colour;
