IFS-2246 Table cell spacing

--- a/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2246-assign-applications.html
+++ b/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2246-assign-applications.html
@@ -92,9 +92,9 @@
             <thead>
                 <tr>
                     <th:block th:if="${param.tab == null or param.tab[0] == 'assign'}">
-                        <th>Select</th>
+                        <th class="width-small">Select</th>
                     </th:block>
-                    <th>Application</th>
+                    <th class="width-small">Application number</th>
                     <th>Project title</th>
                     <th>Lead organisation</th>
                     <th:block th:if="${param.tab != null and param.tab[0] == 'view'}">
