--- a/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2248-review-send.html
+++ b/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2248-review-send.html
@@ -36,11 +36,11 @@
                 <table>
                     <thead>
                         <tr>
-                            <th>Application</th>
+                            <th class="width-small">Application number</th>
                             <th>Project title</th>
                             <th>Lead organisation</th>
                             <th class="numeric">Assessors</th>
-                            <th><span class="visuallyhidden">Remove</span></th>
+                            <th class="alignright"><span class="visuallyhidden">Remove</span></th>
                         </tr>
                     </thead>
                     <tbody>
@@ -49,7 +49,7 @@
                             <td>Electronics, sensors &#38; photonics, Materials</td>
                             <td>Ooba</td>
                             <td class="numeric">1</td>
-                            <td><a href="#">Remove</a></td>
+                            <td class="alignright"><a href="#">Remove</a></td>
 
                         </tr>
                         <tr>
@@ -57,21 +57,21 @@
                             <td>Healthcare, Regentative medicine, Stratified medicine</td>
                             <td>Empire Ltd</td>
                             <td class="numeric">1</td>
-                            <td><a href="#">Remove</a></td>
+                            <td class="alignright"><a href="#">Remove</a></td>
                         </tr>
                         <tr>
                             <td><a href="#">171</a></td>
                             <td>Healthcare, Analytical science</td>
                             <td>Ideas</td>
                             <td class="numeric">1</td>
-                            <td><a href="#">Remove</a></td>
+                            <td class="alignright"><a href="#">Remove</a></td>
                         </tr>
                         <tr>
                             <td><a href="#">265</a></td>
                             <td>Architectures and operating systems</td>
                             <td>Wordpedia</td>
                             <td class="numeric">1</td>
-                            <td><a href="#">Remove</a></td>
+                            <td class="alignright"><a href="#">Remove</a></td>
                         </tr>
                     </tbody>
                 </table>
